--- a/index.html
+++ b/index.html
@@ -1,13 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harry Potter Game</title>
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-    <link href="assets/index.js" type="text/javascript" />
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Harry Potter Game</title>
+   <link rel="stylesheet"
+              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/   bootstrap.min.css"   />
+       
+   <script src="https: //code.jquery.com/jquery-3.5.1.slim.min.js"
+              integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+       crossorigin="anonymous">
+      </script>
+       
+   <script src="https: //cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+              integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+       crossorigin="anonymous">
+      </script>
+
+   <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+   <link href="assets/index.js" type="text/javascript"   />
 </head>
+
 <body>
-    
+   <!-- Help and About pages -->
+   <header>
+      <div class="container-fluid header-container">
+            <nav class="navbar navbar-expand-sm navbar-light">
+                <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"        data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item mr-2">
+                            <a class="nav-link" href="#hep">Help</a>
+                        </li>
+                        <li class="nav-item mr-2">
+                            <a class="nav-link" href="#about">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+
+   </header> 
+   <!-- Hogwarts crest, moving Welcome and Tap to play -->
+   <section id="home-page" >
+      <div class="container-fluid school-crest-container">
+         <div class="school">
+         
+            <h1 class="welcome">Welcome to Hogwarts</h1>
+            <img class="hogwarts-crest" src="assets/images/hogwarts-crest.png/" alt="Hogwarts Crest">
+         </div>
+      </div>
+   </section>
+   <!-- game section -->
+   <section id="game">
+      <!--<div class="container-fluid house-crest-container">-->
+         <img class="gryffindor-crest" src="assets/images/gryffindor_crest.png/" alt="Hogwarts Crest">
+         <img class="slytherin-crest" src="assets/images/slytherin_crest.png/" alt="Hogwarts Crest">
+         <img class="hufflepuff-crest" src="assets/images/hufflepuff_crest.png/" alt="Hogwarts Crest">
+         <img class="ravenclaw-crest" src="assets/images/ravenclaw_crest.png/" alt="Hogwarts Crest">
+     <!-- </div>-->
+   </section>
+   <!-- help section -->
+   <section id="help">
+      <h1 class="how-to-play">How to Play</h1>
+      <p class="instructions">The idea of the game is to follow the pattern created by the house crests.</p>
+      <p>1. One of the house crests will light up</p>
+      <p>2. Copy the game by clicking on the same house crest\n\t</p>
+      <p>3. The game will duplicate the first signal and light up a second house crest\n\t</p>
+      <p>4. Copy the game by clicking on both house crests in the order they were lit up\n\t</p>
+      <p>5. The game will add another signal by lighting up a thrid housee crest\n\n\t</p>
+      <p>It is you job to copy the games signals</p>
+      <p>Good Luck!</p>
+   </section>
+   <!-- about section -->
+   <section id="about">
+      <h1 class="welcome">About the Game</h1>
+   </section>
 </body>
+
 </html>
