--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
        crossorigin="anonymous">
       </script>
-
+   <link href="assets/fonts/ParryHotter.ttf" />
    <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
    <link href="assets/index.js" type="text/javascript"   />
 </head>
@@ -49,18 +49,20 @@
          <div class="school">
          
             <h1 class="welcome">Welcome to Hogwarts</h1>
-            <img class="hogwarts-crest" src="assets/images/hogwarts-crest.png/" alt="Hogwarts Crest">
+            <div id="hogwarts-crest"></div>
+
+            <img  src="assets/images/hogwarts_crest.png/" alt="Hogwarts Crest">
          </div>
       </div>
    </section>
    <!-- game section -->
    <section id="game">
-      <!--<div class="container-fluid house-crest-container">-->
-         <img class="gryffindor-crest" src="assets/images/gryffindor_crest.png/" alt="Hogwarts Crest">
-         <img class="slytherin-crest" src="assets/images/slytherin_crest.png/" alt="Hogwarts Crest">
-         <img class="hufflepuff-crest" src="assets/images/hufflepuff_crest.png/" alt="Hogwarts Crest">
-         <img class="ravenclaw-crest" src="assets/images/ravenclaw_crest.png/" alt="Hogwarts Crest">
-     <!-- </div>-->
+      <div class="container-fluid house-crest-container">
+         <button class="gryffindor-crest"> <img  src="assets/images/gryffindor_crest.png/" alt="Gryffindor Crest"></button>
+         <input type="image" src="assets/images/slytherin_crest.png/" class="slytherin-crest">
+         <img class="hufflepuff-crest" src="assets/images/hufflepuff_crest.png/" alt="Hufflepuff Crest">
+         <img class="ravenclaw-crest" src="assets/images/ravenclaw_crest.png/" alt="Ravenclaw Crest">
+     </div>
    </section>
    <!-- help section -->
    <section id="help">
