--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
               integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
        crossorigin="anonymous">
       </script>
-   <link href="assets/fonts/parry-hotter.ttf" />
+   <link href="assets/fonts/ParryHotter.ttf" />
    <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
    <!--<link href="assets/index.js" type="text/javascript"   />-->
 </head>
@@ -46,21 +46,11 @@
         </div>
 
    </header> 
-   <!-- Hogwarts crest, moving Welcome and Tap to play -->
-   <section id="home-page" >
-      <div class="container-fluid school-crest-container">
-         <div calss="row">
-         <div class="col-3 text-center">
-            <h1 class="welcome">Welcome to Hogwarts</h1>
-            <div id="hogwarts-crest">
-                  <img src="assets/images/hogwarts-crest.png" width="30%" height="30%" alt="Hogwarts Crest">
-            </div>
-         </div>
-         </div>
-      </div>
+
+   <!-- about section -->
+   <section id="about">
+      <h1 class="welcome">About the Game</h1>
    </section>
-  
-  
 </body>
 
 </html>
