--- a/game.html
+++ b/game.html
@@ -17,14 +17,14 @@
               integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
        crossorigin="anonymous">
       </script>
-   <link href="assets/fonts/parry-hotter.ttf" />
+   <link href="assets/fonts/ParryHotter.ttf" />
    <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
    <!--<link href="assets/index.js" type="text/javascript"   />-->
 </head>
 
 <body>
    <!-- Help and About pages -->
-   <header>
+<header>
       <div class="container-fluid header-container">
             <nav class="navbar navbar-expand-sm navbar-light">
                 <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"        data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
@@ -44,8 +44,7 @@
                 </div>
             </nav>
         </div>
-
-   </header> 
+   </header>
    <!-- Hogwarts crest, moving Welcome and Tap to play -->
    <section id="home-page" >
       <div class="container-fluid school-crest-container">
@@ -59,7 +58,19 @@
          </div>
       </div>
    </section>
-  
+   <!-- game section -->
+   <section id="game">
+      <div class="container-fluid house-crest-container">
+         <div calss="row">
+         <div class="col-12 text-center">
+         <input type="image" src="assets/images/gryffindor-crest.png" class="game-btn gryffindor" alt="gryffindor Crest">
+         <input type="image" src="assets/images/slytherin-crest.png" class="game-btn slytherin" alt="Slytherin Crest">
+         <input type="image" src="assets/images/hufflepuff-crest.png" class="game-btn hufflepuff" alt="Hufflepuff Crest">
+         <input type="image" src="assets/images/ravenclaw-crest.png" class="game-btn ravenclaw" alt="Ravenclaw Crest">     
+     </div>
+         </div>
+      </div>
+   </section>
   
 </body>
 
