--- a/help.html
+++ b/help.html
@@ -17,7 +17,7 @@
               integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
        crossorigin="anonymous">
       </script>
-   <link href="assets/fonts/parry-hotter.ttf" />
+   <link href="assets/fonts/ParryHotter.ttf" />
    <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
    <!--<link href="assets/index.js" type="text/javascript"   />-->
 </head>
@@ -46,21 +46,19 @@
         </div>
 
    </header> 
-   <!-- Hogwarts crest, moving Welcome and Tap to play -->
-   <section id="home-page" >
-      <div class="container-fluid school-crest-container">
-         <div calss="row">
-         <div class="col-3 text-center">
-            <h1 class="welcome">Welcome to Hogwarts</h1>
-            <div id="hogwarts-crest">
-                  <img src="assets/images/hogwarts-crest.png" width="30%" height="30%" alt="Hogwarts Crest">
-            </div>
-         </div>
-         </div>
-      </div>
+
+   <!-- help section -->
+   <section id="help">
+      <h1 class="how-to-play">How to Play</h1>
+      <p class="instructions">The idea of the game is to follow the pattern created by the house crests.</p>
+      <p>1. One of the house crests will light up</p>
+      <p>2. Copy the game by clicking on the same house crest\n\t</p>
+      <p>3. The game will duplicate the first signal and light up a second house crest\n\t</p>
+      <p>4. Copy the game by clicking on both house crests in the order they were lit up\n\t</p>
+      <p>5. The game will add another signal by lighting up a thrid housee crest\n\n\t</p>
+      <p>It is you job to copy the games signals</p>
+      <p>Good Luck!</p>
    </section>
-  
-  
 </body>
 
 </html>
