--- a/help.html
+++ b/help.html
@@ -4,22 +4,18 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Harry Potter Game</title>
-   <link rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/   bootstrap.min.css"   />
-       
-   <script src="https: //code.jquery.com/jquery-3.5.1.slim.min.js"
-              integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-       crossorigin="anonymous">
+
+  <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css" />-->
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
       </script>
-       
-   <script src="https: //cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-              integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-       crossorigin="anonymous">
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
       </script>
-   <link href="assets/fonts/ParryHotter.ttf" />
-   <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+   <link href="assets/fonts/parry-hotter.ttf" />
+   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
    <!--<link href="assets/index.js" type="text/javascript"   />-->
+   <title>Harry Potter Game</title>
 </head>
 
 <body>
