--- a/index.html
+++ b/index.html
@@ -4,63 +4,54 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Harry Potter Game</title>
-   <link rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/   bootstrap.min.css"   />
-       
-   <script src="https: //code.jquery.com/jquery-3.5.1.slim.min.js"
-              integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-       crossorigin="anonymous">
-      </script>
-       
-   <script src="https: //cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-              integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-       crossorigin="anonymous">
-      </script>
-   <link href="assets/fonts/parry-hotter.ttf" />
-   <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+   <!-- Bootstrap CSS -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
    <!--<link href="assets/index.js" type="text/javascript"   />-->
+   <title>Harry Potter Game</title>
 </head>
 
 <body>
    <!-- Help and About pages -->
    <header>
-      <div class="container-fluid header-container">
-            <nav class="navbar navbar-expand-sm navbar-light">
-                <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"        data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav mr-auto">
-                           <li class="nav-item mr-2">
-                            <a class="nav-link" href="game.html">game</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a class="nav-link" href="help.html">Help</a>
-                        </li>
-                        <li class="nav-item mr-2">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-
-   </header> 
+      <div class="container header-container">
+         <nav class="navbar navbar-expand-sm navbar-dark">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+               <ul class="navbar-nav ml-auto">
+                  <li class="nav-item ml-2">
+                     <a class="nav-link" href="game.html">Game</a>
+                  </li>
+                  <li class="nav-item ml-2">
+                     <a class="nav-link" href="help.html">Help</a>
+                  </li>
+                  <li class="nav-item ml-2">
+                     <a class="nav-link" href="about.html">About</a>
+                  </li>
+               </ul>
+            </div>
+         </nav>
+      </div>
+   </header>
    <!-- Hogwarts crest, moving Welcome and Tap to play -->
-   <section id="home-page" >
-      <div class="container-fluid school-crest-container">
-         <div calss="row">
-         <div class="col-3 text-center">
-            <h1 class="welcome">Welcome to Hogwarts</h1>
-            <div id="hogwarts-crest">
-                  <img src="assets/images/hogwarts-crest.png" width="30%" height="30%" alt="Hogwarts Crest">
+   <section id="home-page">
+      <div class="container school-crest-container">
+         <div class="row">
+            <div class="col-12 text-center welcome">
+               <h1>Welcome to Hogwarts</h1>
             </div>
          </div>
+         <div class="row">
+            <div class="col-12 mx-auto d-block align-center">
+                  <img class="hogwarts-crest" src="assets/images/hogwarts-crest.png"  alt="Hogwarts Crest">
+            </div>
          </div>
       </div>
    </section>
-  
-  
 </body>
 
 </html>
