Landing page alignment sorted for multiple devices

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
    </header>
    <!-- Hogwarts crest, moving Welcome and Tap to play -->
    <section id="home-page">
-      <div class="container school-crest-container">
+      <div class="container-fluid no-gutters school-crest-container">
          <div class="row">
             <div class="col-12 text-center welcome">
                <h1>Welcome to Hogwarts</h1>
