--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
-   <!--<link href="assets/index.js" type="text/javascript"   />-->
    <title>Harry Potter Game</title>
+
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+   <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+   <link rel="stylesheet" href="assets/css//style.css" type="text/css">
+   <link rel="stylesheet" href="assets/js/index.js" type="text/javascript">
 </head>
 
 <body>
    <!-- Help and About pages -->
    <header>
-      <div class="container header-container">
-         <nav class="navbar navbar-expand-sm navbar-dark">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item ml-2">
-                     <a class="nav-link" href="game.html">Game</a>
+      <div class="container-fluid header-container">
+         <nav class="navbar navbar-expand-sm navbar-inverse">
+            <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+                <ul class="navbar-nav navbar-right">
+                   <li class="active nav-item mr-2">
+                      <a class="nav-link" href="index.html">Home</a>
+                     </li>
+                  <li class="nav-item mr-2">
+                     <a class="nav-link" href="about.html">About</a>
                   </li>
-                  <li class="nav-item ml-2">
-                     <a class="nav-link" href="help.html">Help</a>
+                  <li class="nav-item mr-2">
+                     <a class="nav-link" href="game.html">Game</a>
                   </li>
-                  <li class="nav-item ml-2">
-                     <a class="nav-link" href="about.html">About</a>
+                  <li class="nav-item mr-2">
+                     <a class="nav-link" href="help.html">Help</a>
+                  </li>
+                  <li class="nav-item mr-2">
+                     <a class="nav-link" href="assets/cv/Siobhan_Baines_CV.pdf" target="_blank">CV Download</a>
                   </li>
                </ul>
             </div>
@@ -52,6 +57,39 @@
          </div>
       </div>
    </section>
+   <footer>
+      <div class="container">
+         <div class="row justify-content-center no-gutters">
+            <div class="col col-sm-6">
+               <ul class="social-media inline-block">
+                  <li class="social-media inline-block ml-3">
+                     <a href="=https://github.com/SiobhanBaines" target="_blank"><i class="fab fa-github"></i></a>
+                  </li>
+                  <li class="social-media inline-block ml-3">
+                     <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                  </li>
+                  <li class="social-media inline-block ml-3">
+                     <a href="https://www.facebook.com/siobhan.baines/" target="_blank"><i class="fab fa-facebook"></i></a>
+                  </li>
+                  <li class="social-media inline-block ml-3">
+                     <a href="https://www.instagram.com/siobhan.baines/" target="_blank"><i class="fab fa-instagram"></i></a>
+                  </li>
+                  <li class="social-media inline-block ml-3">
+                     <a href="https://twitter.com/BainesSiobhan" target="_blank"><i class="fab fa-twitter"></i></a>
+                  </li>
+               </ul>
+            </div>
+         </div>
+      </div>
+   </footer>
+   
+<!-- SCRIPTS -->
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </body>
+
+
 
 </html>
