--- a/about.html
+++ b/about.html
@@ -15,35 +15,31 @@
 </head>
 
 <body>
-   <!-- Help and About pages -->
-   <header>
-      <div class="container-fluid header-container">
-         <nav class="navbar navbar-expand-sm navbar-dark">
-            <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mr-auto">
-                   <li class="active nav-item mr-2">
-                      <a class="nav-link" href="index.html">Home</a>
-                     </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="about.html">About</a>
+   <!-- Help and About pages --> <header>
+      <div class="container">
+         <nav class="navbar navbar-dark">
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span></button> 
+               <div class="collapse navbar-collapse" id="navbarNavDropdown">
+               <ul class="navbar-nav">
+                  <li class="nav-item active">
+                     <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="game.html">Game</a>
-                  </li>
-                  <li class="nav-item mr-2">
+                  <li class="nav-item">
                      <a class="nav-link" href="help.html">Help</a>
                   </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="assets/cv/Siobhan_Baines_CV.pdf" target="_blank">CV Download</a>
+                  <li class="nav-item">
+                     <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="game.html">Game</a>
                   </li>
                </ul>
             </div>
          </nav>
       </div>
    </header>
-
-   <!-- about section -->
+<!-- about section -->
    <section id="about">
       <h1 class="welcome">About the Game</h1>
    </section>
