--- a/game.html
+++ b/game.html
@@ -15,86 +15,56 @@
 </head>
 
 <body>
-   <!-- Help and About pages -->
-   <header>
-      <div class="container-fluid header-container">
-         <nav class="navbar navbar-expand-sm navbar-dark">
-            <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav mr-auto">
-                   <li class="active nav-item mr-2">
-                      <a class="nav-link" href="index.html">Home</a>
-                     </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="about.html">About</a>
+   <!-- Help and About pages --> <header>
+      <div class="container">
+         <nav class="navbar navbar-dark">
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span></button> 
+               <div class="collapse navbar-collapse" id="navbarNavDropdown">
+               <ul class="navbar-nav">
+                  <li class="nav-item active">
+                     <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="game.html">Game</a>
-                  </li>
-                  <li class="nav-item mr-2">
+                  <li class="nav-item">
                      <a class="nav-link" href="help.html">Help</a>
                   </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="assets/cv/Siobhan_Baines_CV.pdf" target="_blank">CV Download</a>
+                  <li class="nav-item">
+                     <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="game.html">Game</a>
                   </li>
                </ul>
             </div>
          </nav>
       </div>
    </header>
-   <!-- Hogwarts crest, moving Welcome and Tap to play -->
-   <section id="home-page" >
-      <div class="container-fluid school-crest-container">
-         <div calss="row">
-         <div class="col-3 text-center">
-            <h1 class="welcome">Welcome to Hogwarts</h1>
-            <div id="hogwarts-crest">
-                  <img src="assets/images/hogwarts-crest.png" width="30%" height="30%" alt="Hogwarts Crest">
-            </div>
-         </div>
-         </div>
-      </div>
-   </section>
    <!-- game section -->
    <section id="game">
-      <div class="container-fluid house-crest-container">
-         <div calss="row">
-         <div class="col-12 text-center">
-         <input type="image" src="assets/images/gryffindor-crest.png" class="game-btn gryffindor" alt="gryffindor Crest">
-         <input type="image" src="assets/images/slytherin-crest.png" class="game-btn slytherin" alt="Slytherin Crest">
-         <input type="image" src="assets/images/hufflepuff-crest.png" class="game-btn hufflepuff" alt="Hufflepuff Crest">
-         <input type="image" src="assets/images/ravenclaw-crest.png" class="game-btn ravenclaw" alt="Ravenclaw Crest">     
+      <div class="container-fluid no-gutters house-crest-container">
+         <div class="row">
+            <div class="col-12 text-center welcome">
+               <h1>Follow the House</h1>
+            </div>
+         </div>
+         <div class="row">
+         <div class="col-6">
+         <input type="image" src="assets/images/gryffindor-crest.png" class="left-game-btn inline-block gryffindor" alt="gryffindor Crest">
+         </div>
+         <div class="col-6">
+         <input type="image" src="assets/images/slytherin-crest.png" class="right-game-btn inline-block slytherin" alt="Slytherin Crest">
+         </div>
+         </div>
+         <div class="row">
+         <div class="col-6">
+         <input type="image" src="assets/images/hufflepuff-crest.png" class="left-game-btn inline-block hufflepuff" alt="Hufflepuff Crest">
+         </div>
+         <div class="col-6">
+         <input type="image" src="assets/images/ravenclaw-crest.png" class="right-game-btn inline-block ravenclaw" alt="Ravenclaw Crest">     
      </div>
          </div>
       </div>
-   </section>
-  
-   <footer>
-      <div class="container">
-         <div class="row justify-content-center no-gutters">
-            <div class="col col-sm-6">
-               <ul class="social-media inline-block">
-                  <li class="social-media inline-block ml-3">
-                     <a href="=https://github.com/SiobhanBaines" target="_blank"><i class="fab fa-github"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.facebook.com/siobhan.baines/" target="_blank"><i class="fab fa-facebook"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.instagram.com/siobhan.baines/" target="_blank"><i class="fab fa-instagram"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://twitter.com/BainesSiobhan" target="_blank"><i class="fab fa-twitter"></i></a>
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </div>
-   </footer>
-   
+   </section>   
 <!-- SCRIPTS -->
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
