--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
 <body>
    <!-- Help and About pages -->
    <header>
-      <div class="container-fluid header-container">
-         <nav class="navbar navbar-expand-sm navbar-inverse">
-            <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-                <ul class="navbar-nav navbar-right">
-                   <li class="active nav-item mr-2">
-                      <a class="nav-link" href="index.html">Home</a>
-                     </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="about.html">About</a>
+      <div class="container">
+         <nav class="navbar navbar-dark">
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span></button> 
+               <div class="collapse navbar-collapse" id="navbarNavDropdown">
+               <ul class="navbar-nav">
+                  <li class="nav-item active">
+                     <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="game.html">Game</a>
-                  </li>
-                  <li class="nav-item mr-2">
+                  <li class="nav-item">
                      <a class="nav-link" href="help.html">Help</a>
                   </li>
-                  <li class="nav-item mr-2">
-                     <a class="nav-link" href="assets/cv/Siobhan_Baines_CV.pdf" target="_blank">CV Download</a>
+                  <li class="nav-item">
+                     <a class="nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="game.html">Game</a>
                   </li>
                </ul>
             </div>
@@ -56,33 +54,7 @@
             </div>
          </div>
       </div>
-   </section>
-   <footer>
-      <div class="container">
-         <div class="row justify-content-center no-gutters">
-            <div class="col col-sm-6">
-               <ul class="social-media inline-block">
-                  <li class="social-media inline-block ml-3">
-                     <a href="=https://github.com/SiobhanBaines" target="_blank"><i class="fab fa-github"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.facebook.com/siobhan.baines/" target="_blank"><i class="fab fa-facebook"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.instagram.com/siobhan.baines/" target="_blank"><i class="fab fa-instagram"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://twitter.com/BainesSiobhan" target="_blank"><i class="fab fa-twitter"></i></a>
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </div>
-   </footer>
-   
+   </section>   
 <!-- SCRIPTS -->
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
