Fix layout of main game page -crests

--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-   <!-- Help and About pages --> <header>
+   <!-- Help and About pages --> 
+   <header>
       <div class="container">
          <nav class="navbar navbar-dark">
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +42,7 @@
    </header>
 <!-- about section -->
    <section id="about">
-      <h1 class="welcome">About the Game</h1>
+      <h1 class="title">About the Game</h1>
    </section>
    <footer>
       <div class="container">
