--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <section id="home-page">
       <div class="container-fluid no-gutters school-crest-container">
          <div class="row">
-            <div class="col-12 text-center welcome">
+            <div class="col-12 text-center title">
                <h1>Welcome to Hogwarts</h1>
             </div>
          </div>
