--- a/game.html
+++ b/game.html
@@ -7,20 +7,25 @@
    <title>Harry Potter Game</title>
 
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+   <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
    <link rel="stylesheet" href="assets/css//style.css" type="text/css">
    <link rel="stylesheet" href="assets/js/index.js" type="text/javascript">
 </head>
 
 <body>
-   <!-- Help and About pages --> <header>
+   <!-- Help and About pages -->
+   <header>
       <div class="container">
          <nav class="navbar navbar-dark">
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span></button> 
-               <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+               data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+               aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
                <ul class="navbar-nav">
                   <li class="nav-item active">
                      <a class="nav-link" href="index.html">Home</a>
@@ -42,33 +47,51 @@
    <!-- game section -->
    <section id="game">
       <div class="container-fluid no-gutters house-crest-container">
-         <div class="row">
-            <div class="col-12 text-center welcome">
+         <div class="row  title">
+            <div class="col-12 text-center">
                <h1>Follow the House</h1>
             </div>
          </div>
+         <div class="row top-row">
+            <div class="col-0 col-md-2 col-lg-3">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+               <input type="image" src="assets/images/gryffindor-crest.png" class="game-btn inline-block gryffindor"
+                  alt="gryffindor Crest">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+               <input type="image" src="assets/images/slytherin-crest.png" class="game-btn inline-block slytherin"
+                  alt="Slytherin Crest">
+            </div>
+            <div class="col-0 col-md-2 col-lg-3">
+            </div>
+         </div>
          <div class="row">
-         <div class="col-6">
-         <input type="image" src="assets/images/gryffindor-crest.png" class="left-game-btn inline-block gryffindor" alt="gryffindor Crest">
-         </div>
-         <div class="col-6">
-         <input type="image" src="assets/images/slytherin-crest.png" class="right-game-btn inline-block slytherin" alt="Slytherin Crest">
-         </div>
-         </div>
-         <div class="row">
-         <div class="col-6">
-         <input type="image" src="assets/images/hufflepuff-crest.png" class="left-game-btn inline-block hufflepuff" alt="Hufflepuff Crest">
-         </div>
-         <div class="col-6">
-         <input type="image" src="assets/images/ravenclaw-crest.png" class="right-game-btn inline-block ravenclaw" alt="Ravenclaw Crest">     
-     </div>
+            <div class="col-0 col-md-2 col-lg-3">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+               <input type="image" src="assets/images/hufflepuff-crest.png" class="game-btn inline-block hufflepuff"
+                  alt="Hufflepuff Crest">
+            </div>
+            <div class="col-6 col-md-4 col-lg-3">
+               <input type="image" src="assets/images/ravenclaw-crest.png" class="game-btn inline-block ravenclaw"
+                  alt="Ravenclaw Crest">
+            </div>
+            <div class="col-0 col-md-2 col-lg-3">
+            </div>
          </div>
       </div>
-   </section>   
-<!-- SCRIPTS -->
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+   </section>
+   <!-- SCRIPTS -->
+   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"></script>
 
 </body>
 
