--- a/about.html
+++ b/about.html
@@ -11,10 +11,12 @@
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
    <link rel="stylesheet" href="assets/css//style.css" type="text/css">
-   <link rel="stylesheet" href="assets/js/index.js" type="text/javascript">
+   <!--<link rel="stylesheet" href="assets/js/index.js" type="text/javascript">-->
+   <script src="assets/js/index.js"></script>
 </head>
 
 <body>
+
    <!-- Help and About pages --> 
    <header>
       <div class="container">
@@ -74,6 +76,7 @@
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+   <script src="assets/js/index.js"></script>   
 
 </body>
 
