--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
-   <link rel="stylesheet" href="assets/css//style.css" type="text/css">
-   <link rel="stylesheet" href="assets/js/index.js" type="text/javascript">
+   <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+   <script src="assets/js/index.js"></script>
 </head>
 
 <body>
@@ -44,19 +44,20 @@
    <section id="home-page">
       <div class="container-fluid no-gutters school-crest-container">
          <div class="row">
-            <div class="col-12 text-center title">
+            <div id="welcome" class="col-12 text-center title">
                <h1>Welcome to Hogwarts</h1>
             </div>
          </div>
          <div class="row">
             <div class="col-12 mx-auto d-block align-center">
-                  <img class="hogwarts-crest" src="assets/images/hogwarts-crest.png"  alt="Hogwarts Crest">
+               <a href="game.html">
+                  <img class="hogwarts-crest" src="assets/images/hogwarts-crest.png"  alt="Hogwarts Crest" href="game.html"></a>
             </div>
          </div>
       </div>
    </section>   
 <!-- SCRIPTS -->
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
