jquery - light up crests

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
    <link rel="stylesheet" href="assets/css//style.css" type="text/css">
-   <!--<link rel="stylesheet" href="assets/js/index.js" type="text/javascript">-->
+   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
    <script src="assets/js/index.js"></script>
 </head>
 
@@ -62,7 +62,7 @@
                   </div>
                   <div class="col-6 col-md-4 col-lg-3">
                      <input id="gryffindor"  type="image" src="assets/images/gryffindor-crest.png"
-                        class="game-btn inline-block gryffindor gryffindor-red" alt="gryffindor Crest">
+                        class="game-btn inline-block gryffindor" alt="gryffindor Crest">
                   </div>
                   <div class="col-6 col-md-4 col-lg-3">
                      <input id="slytherin" type="image" src="assets/images/slytherin-crest.png" class="game-btn inline-block slytherin"
@@ -90,9 +90,6 @@
       </div>
    </section>
    <!-- SCRIPTS -->
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
       crossorigin="anonymous"></script>
