Add about and help sections details and formating

--- a/about.html
+++ b/about.html
@@ -2,81 +2,110 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Harry Potter Game</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Harry Potter Game</title>
 
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-   <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
-   <link rel="stylesheet" href="assets/css//style.css" type="text/css">
-   <!--<link rel="stylesheet" href="assets/js/index.js" type="text/javascript">-->
-   <script src="assets/js/index.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+    <link rel="stylesheet" href="assets/css//style.css" type="text/css">
+    <!--<link rel="stylesheet" href="assets/js/index.js" type="text/javascript">-->
+    <script src="assets/js/index.js"></script>
 </head>
 
 <body>
 
-   <!-- Help and About pages --> 
-   <header>
-      <div class="container">
-         <nav class="navbar navbar-dark">
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span></button> 
-               <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav">
-                  <li class="nav-item active">
-                     <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="help.html">Help</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="game.html">Game</a>
-                  </li>
-               </ul>
+    <!-- Help and About pages -->
+    <header>
+        <div class="container">
+            <nav class="navbar navbar-dark">
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="help.html">Help</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- about section -->
+    <section id="about">
+        <h3 class="title subject">Harry Potter</h3>
+        <p class="synopsis">Harry Potter is a series of seven fantasy novels written by British author, J. K. Rowling.
+            The novels chronicle the lives of a young wizard, Harry Potter, and his friends Hermione Granger and Ron
+            Weasley, all of whom are students at Hogwarts School of Witchcraft and Wizardry. The main story arc concerns
+            Harry's struggle against Lord Voldemort, a dark wizard who intends to become immortal, overthrow the wizard
+            governing body known as the Ministry of Magic and subjugate all wizards and Muggles (non-magical people).
+        </p>
+        <p class="source">(source: https://en.wikipedia.org/wiki/Harry_Potter)</p>
+        <h3 class="title subjectJK">J K Rawling</h3>
+        <p class="synopsis">
+            Joanne Rowling (born 31 July 1965), better known by her pen name J. K. Rowling, is a British author and
+            philanthropist. She is best known for writing the Harry Potter fantasy series, which has won multiple awards
+            and sold more than 500 million copies, becoming the best-selling book series in history. The books are the
+            basis of a popular film series, over which Rowling had overall approval on the scripts and was a producer on
+            the final films. She also writes crime fiction under the pen name Robert Galbraith.
+        </p>
+        <p class="source">(source: https://en.wikipedia.org/wiki/J._K._Rowling)</p>
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center no-gutters">
+                <div class="col col-sm-6">
+                    <ul class="social-media inline-block">
+                        <li class="social-media inline-block ml-3">
+                            <a href="=https://github.com/SiobhanBaines" target="_blank"><i
+                                    class="fab fa-github"></i></a>
+                        </li>
+                        <li class="social-media inline-block ml-3">
+                            <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank"><i
+                                    class="fab fa-linkedin"></i></a>
+                        </li>
+                        <li class="social-media inline-block ml-3">
+                            <a href="https://www.facebook.com/siobhan.baines/" target="_blank"><i
+                                    class="fab fa-facebook"></i></a>
+                        </li>
+                        <li class="social-media inline-block ml-3">
+                            <a href="https://www.instagram.com/siobhan.baines/" target="_blank"><i
+                                    class="fab fa-instagram"></i></a>
+                        </li>
+                        <li class="social-media inline-block ml-3">
+                            <a href="https://twitter.com/BainesSiobhan" target="_blank"><i
+                                    class="fab fa-twitter"></i></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-         </nav>
-      </div>
-   </header>
-<!-- about section -->
-   <section id="about">
-      <h1 class="title">About the Game</h1>
-   </section>
-   <footer>
-      <div class="container">
-         <div class="row justify-content-center no-gutters">
-            <div class="col col-sm-6">
-               <ul class="social-media inline-block">
-                  <li class="social-media inline-block ml-3">
-                     <a href="=https://github.com/SiobhanBaines" target="_blank"><i class="fab fa-github"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.linkedin.com/in/siobhan-baines-9b296a22/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.facebook.com/siobhan.baines/" target="_blank"><i class="fab fa-facebook"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://www.instagram.com/siobhan.baines/" target="_blank"><i class="fab fa-instagram"></i></a>
-                  </li>
-                  <li class="social-media inline-block ml-3">
-                     <a href="https://twitter.com/BainesSiobhan" target="_blank"><i class="fab fa-twitter"></i></a>
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </div>
-   </footer>
-   
-<!-- SCRIPTS -->
-   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-   <script src="assets/js/index.js"></script>   
+        </div>
+    </footer>
+
+    <!-- SCRIPTS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
 
 </body>
 
