--- a/game.html
+++ b/game.html
@@ -2,100 +2,98 @@
 <html lang="en">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Harry Potter Game</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Harry Potter Game</title>
 
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-   <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
-   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-   <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
-   <link rel="stylesheet" href="assets/css//style.css" type="text/css">
-   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-   <script src="assets/js/index.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.1.2/css/tempusdominus-bootstrap-4.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/fonts/ParryHotter.ttf" type="text/font">
+    <link rel="stylesheet" href="assets/css//style.css" type="text/css">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
 </head>
 
 <body>
 
-   <!-- Help and About pages -->
-   <header>
-      <div class="container">
-         <nav class="navbar navbar-dark">
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
-               data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-               aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-               <ul class="navbar-nav">
-                  <li class="nav-item active">
-                     <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="help.html">Help</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="game.html">Game</a>
-                  </li>
-               </ul>
+    <!-- Help and About pages -->
+    <header>
+        <div class="container">
+            <nav class="navbar navbar-dark">
+                <button class="navbar-toggler collapsed" type="button" data-toggle="collapse"
+                    data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link sr-only" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="help.html">Help</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- game section -->
+    <section id="game">
+        <div class="container-fluid no-gutters house-crest-container">
+            <div class="row  title">
+                <div class="col-12 text-center">
+                    <h1>Follow the House</h1>
+                </div>
             </div>
-         </nav>
-      </div>
-   </header>
-   <!-- game section -->
-   <section id="game">
-      <div class="container-fluid no-gutters house-crest-container">
-         <div class="row  title">
-            <div class="col-12 text-center">
-               <h1>Follow the House</h1>
+            <div class="row">
+                <div class="col">
+                    <button id="play"><i class="far fa-play-circle"></i></button>
+                    <div class="row top-row">
+                        <div class="col-0 col-md-2 col-lg-3">
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <input id="gryffindor" type="image" src="assets/images/gryffindor-crest.png"
+                                class="game-btn inline-block gryffindor" alt="gryffindor Crest">
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <input id="slytherin" type="image" src="assets/images/slytherin-crest.png"
+                                class="game-btn inline-block slytherin" alt="Slytherin Crest">
+                        </div>
+                        <div class="col-0 col-md-2 col-lg-3">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-0 col-md-2 col-lg-3">
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <input id="hufflepuff" type="image" src="assets/images/hufflepuff-crest.png"
+                                class="game-btn inline-block hufflepuff" alt="Hufflepuff Crest">
+                        </div>
+                        <div class="col-6 col-md-4 col-lg-3">
+                            <input id="ravenclaw" type="image" src="assets/images/ravenclaw-crest.png"
+                                class="game-btn inline-block ravenclaw" alt="Ravenclaw Crest">
+                        </div>
+                        <div class="col-0 col-md-2 col-lg-3">
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-         <div class="row">
-            <div class="col">
-               <button id="play"><i class="far fa-play-circle"></i></button>
-               <div class="row top-row">
-                  <div class="col-0 col-md-2 col-lg-3">
-                  </div>
-                  <div class="col-6 col-md-4 col-lg-3">
-                     <input id="gryffindor"  type="image" src="assets/images/gryffindor-crest.png"
-                        class="game-btn inline-block gryffindor" alt="gryffindor Crest">
-                  </div>
-                  <div class="col-6 col-md-4 col-lg-3">
-                     <input id="slytherin" type="image" src="assets/images/slytherin-crest.png" class="game-btn inline-block slytherin"
-                        alt="Slytherin Crest">
-                  </div>
-                  <div class="col-0 col-md-2 col-lg-3">
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-0 col-md-2 col-lg-3">
-                  </div>
-                  <div class="col-6 col-md-4 col-lg-3">
-                     <input id="hufflepuff" type="image" src="assets/images/hufflepuff-crest.png"
-                        class="game-btn inline-block hufflepuff" alt="Hufflepuff Crest">
-                  </div>
-                  <div class="col-6 col-md-4 col-lg-3">
-                     <input id="ravenclaw" type="image" src="assets/images/ravenclaw-crest.png" class="game-btn inline-block ravenclaw"
-                        alt="Ravenclaw Crest">
-                  </div>
-                  <div class="col-0 col-md-2 col-lg-3">
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </section>
-   <!-- SCRIPTS -->
-   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"></script>
-   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-      crossorigin="anonymous"></script>
+        </div>
+    </section>
+    <!-- SCRIPTS -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
 
 
 </body>
