Add message board and re-align

--- a/game.html
+++ b/game.html
@@ -50,37 +50,35 @@
                 <div class="col-12 text-center">
                     <h1>Follow the House</h1>
                 </div>
-                <button id="play"><i class="far fa-play-circle"></i></button>
             </div>
             <div class="row">
-                <div class="col-8 col-md-12">
+                <div class="col-lg-8 col-md-12 game">
+                    <button id="play"><i class="far fa-play-circle"></i></button>
                     <div class="row top-row">
-                        <div class="col-8 col-md-6">
+                        <div class="col-6">
                             <input id="gryffindor" type="image" src="assets/images/gryffindor-crest.png"
                                 class="game-btn inline-block gryffindor" alt="gryffindor Crest">
                         </div>
-                        <div class="col-4 col-md-6">
+                        <div class="col-6">
                             <input id="slytherin" type="image" src="assets/images/slytherin-crest.png"
                                 class="game-btn inline-block slytherin" alt="Slytherin Crest">
                         </div>
                     </div>
+
                     <div class="row">
-                        <div class="col-8 col-md-6">
+                        <div class="col-6">
                             <input id="hufflepuff" type="image" src="assets/images/hufflepuff-crest.png"
                                 class="game-btn inline-block hufflepuff" alt="Hufflepuff Crest">
                         </div>
-                        <div class="col-4 col-md-6">
+                        <div class="col-6">
                             <input id="ravenclaw" type="image" src="assets/images/ravenclaw-crest.png"
                                 class="game-btn inline-block ravenclaw" alt="Ravenclaw Crest">
                         </div>
                     </div>
                 </div>
-                <div class="col-4 col-md-12 board">
+                <div class="col-lg-4 col-md-12 board">
                     <img id="message-board" src="assets/images/background-wood.png" alt="message-board">
-                    <div class="row">
                         <p class="lost">You have been conquered by cunning Slytherin</p>
-                    </div>
-
                 </div>
             </div>
         </div>
